tests/lean/num3.lean
import data.num
set_option pp.notation false
set_option pp.implicit true

variable N : Type.{1}
variable z : N
variable o : N
variable a : N

notation 0 := z
notation 1 := o

check a = 0
check 2 = 1
